RESOLVED FIXED80081
crash when doing repeated double-tap-to-zoom gesture on apple startpage
https://bugs.webkit.org/show_bug.cgi?id=80081
Summary crash when doing repeated double-tap-to-zoom gesture on apple startpage
Anders Carlsson
Reported 2012-03-01 18:59:22 PST
crash when doing repeated double-tap-to-zoom gesture on apple startpage
Attachments
Patch (2.02 KB, patch)
2012-03-01 19:03 PST, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2012-03-01 19:03:17 PST
Anders Carlsson
Comment 2 2012-03-01 19:12:09 PST
Note You need to log in before you can comment on or make changes to this bug.